# pull-request-generator

./: .autoreleasegenerator.yml  .deepsource.toml  .gitignore  .python-version  README.md  app.py  pr_handler.py  pyproject.toml  requirements.fixed.txt  requirements.txt  run.sh  sonar-project.properties  sweep.yaml  test_app.py  test_snorkell_auto_documentation.py
.github/workflows/: code_quality.yml  pypi-publish.yml
src/: app.py
tests/: test_app.py  test_create_branch_handler.py
