[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PullRequestGenerator"
authors = [
    { name="Heitor Luis Polidoro" },
]
description = "App to automatcaly create Pull Requests."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["github", "app", "githubapp", "pull", "pr", "pull request"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
version = "0.1"

[project.urls]
"Homepage" = "https://github.com/heitorpolidoro/pull-request-generator"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]
relative_files = true

[tool.black]
max_line_length = 120
